--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
     "version": "1.0.0",
     "scripts": {
         "build": "tsc --project tsconfig.json",
+        "clean": "npm run clean:dist && npm run clean:js",
+        "clean:dist": "rimraf dist",
+        "clean:js": "rimraf ryanshy",
+        "dist": "npm run dist:js && npm run dist:html && npm run dist:css && npm run dist:package",
+        "dist:js": "copyfiles ryanshy/**/* dist",
+        "dist:html": "copyfiles index.html dist/",
+        "dist:css": "copyfiles *.css dist/",
+        "dist:package": "copyfiles package.json dist/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -13,5 +21,9 @@
     "description": "",
     "dependencies": {
         "typescript": "^5.7.2"
+    },
+    "devDependencies": {
+        "copyfiles": "^2.4.1",
+        "rimraf": "^6.0.1"
     }
 }
