renamed npm name + version bump

--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-    "name": "dol",
+    "name": "dol_remote_save",
     "main": "index.html",
     "chromium-args": "--allow-file-access-from-files",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "scripts": {
         "build": "tsc --project tsconfig.json",
         "clean": "npm run clean:dist && npm run clean:js",
         "clean:dist": "rimraf dist",
         "clean:js": "rimraf ryanshy",
-        "dist": "npm run dist:js && npm run dist:html && npm run dist:css && npm run dist:package",
+        "dist": "npm run dist:js && npm run dist:html && npm run dist:css1 && npm run dist:css2 && npm run dist:package",
         "dist:js": "copyfiles ryanshy/**/* dist",
         "dist:html": "copyfiles index.html dist/",
-        "dist:css": "copyfiles *.css dist/",
+        "dist:css1": "copyfiles ryanshyStyle/**/* dist",
+        "dist:css2": "copyfiles *.css dist/",
         "dist:package": "copyfiles package.json dist/",
+        "integrate": "npm run integrate:html && npm run integrate:android",
+        "integrate:html": "echo \"Error: no integrate script set\" && exit 1",
+        "integrate:android": "echo \"Error: no integrate script set\" && exit 1",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
-    "author": "",
+    "author": "RyanShy",
     "license": "MIT",
-    "description": "",
+    "description": "An extension for DoL (Degrees of Lewdity) to allow saves on a remote Server",
     "dependencies": {
         "typescript": "^5.7.2"
     },
