created some integrate scripts for html

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "version": "1.0.1",
     "scripts": {
         "build": "tsc --project tsconfig.json",
-        "clean": "npm run clean:dist && npm run clean:js",
+        "build:start": "npm run clean && npm run build && npm run dist && npm run integrate:html && npm run start",
+        "clean": "npm run clean:dist && npm run clean:js && npm run clean:integrate",
         "clean:dist": "rimraf dist",
         "clean:js": "rimraf ryanshy",
+        "clean:integrate": "rimraf integrate/html/Degrees_of_Lewdity",
         "dist": "npm run dist:js && npm run dist:html && npm run dist:css1 && npm run dist:css2 && npm run dist:package",
         "dist:js": "copyfiles ryanshy/**/* dist",
         "dist:html": "copyfiles index.html dist/",
@@ -15,8 +17,10 @@
         "dist:css2": "copyfiles *.css dist/",
         "dist:package": "copyfiles package.json dist/",
         "integrate": "npm run integrate:html && npm run integrate:android",
-        "integrate:html": "echo \"Error: no integrate script set\" && exit 1",
+        "integrate:html": "npm run integrate:html:zip && copyfiles -u 1 dist/**/* integrate/html/Degrees_of_Lewdity/",
+        "integrate:html:zip": "cd ./integrate/html && start /WAIT 7z x -y Degrees_of_Lewdity.zip && cd ../..",
         "integrate:android": "echo \"Error: no integrate script set\" && exit 1",
+        "start": "cd ./integrate/html/Degrees_of_Lewdity && start \"Degrees of Lewdity 0.5.3.3\" /d \"J:\\Program Files\\nwjs-sdk-v0.89.0-win-x64\\\" nw.exe --remote-debugging-port=9222 \"%cd%/integrate/html/Degrees_of_Lewdity",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
