relocate js and css

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
         "build:start": "npm run clean && npm run build && npm run dist && npm run integrate:html && npm run start",
         "clean": "npm run clean:dist && npm run clean:js && npm run clean:integrate",
         "clean:dist": "rimraf dist",
-        "clean:js": "rimraf ryanshy",
+        "clean:js": "rimraf dolRemoteSave",
         "clean:integrate": "rimraf integrate/html/Degrees_of_Lewdity",
         "dist": "npm run dist:js && npm run dist:html && npm run dist:css1 && npm run dist:css2 && npm run dist:package",
-        "dist:js": "copyfiles ryanshy/**/* dist",
+        "dist:js": "copyfiles dolRemoteSave/**/* dist",
         "dist:html": "copyfiles index.html dist/",
-        "dist:css1": "copyfiles ryanshyStyle/**/* dist",
+        "dist:css1": "copyfiles dolRemoteSaveStyle/**/* dist",
         "dist:css2": "copyfiles *.css dist/",
         "dist:package": "copyfiles package.json dist/",
         "integrate": "npm run integrate:html && npm run integrate:android",
