Setup Android Integration

--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "scripts": {
         "build": "tsc --project tsconfig.json",
         "build:start": "npm run clean && npm run build && npm run dist && npm run integrate:html && npm run start",
+        "build:android": "npm run clean && npm run build && npm run dist && npm run integrate:android",
+        "build:html": "npm run clean && npm run build && npm run dist && npm run integrate:html",
         "clean": "npm run clean:dist && npm run clean:js && npm run clean:integrate",
         "clean:dist": "rimraf dist",
         "clean:js": "rimraf dolRemoteSave",
-        "clean:integrate": "rimraf integrate/html/Degrees_of_Lewdity",
+        "clean:integrate": "npm run clean:integrate:android && npm run clean:integrate:html",
+        "clean:integrate:android": "rimraf integrate/android/Degrees_of_Lewdity",
+        "clean:integrate:html": "rimraf integrate/html/Degrees_of_Lewdity",
         "dist": "npm run dist:js && npm run dist:html && npm run dist:css1 && npm run dist:css2 && npm run dist:package",
         "dist:js": "copyfiles dolRemoteSave/**/* dist",
         "dist:html": "copyfiles index.html dist/",
@@ -18,9 +22,18 @@
         "dist:package": "copyfiles package.json dist/",
         "integrate": "npm run integrate:html && npm run integrate:android",
         "integrate:html": "npm run integrate:html:zip && copyfiles -u 1 dist/**/* integrate/html/Degrees_of_Lewdity/",
-        "integrate:html:zip": "cd ./integrate/html && start /WAIT 7z x -y Degrees_of_Lewdity.zip && cd ../..",
-        "integrate:android": "echo \"Error: no integrate script set\" && exit 1",
-        "start": "cd ./integrate/html/Degrees_of_Lewdity && start \"Degrees of Lewdity 0.5.3.3\" /d \"J:\\Program Files\\nwjs-sdk-v0.89.0-win-x64\\\" nw.exe --remote-debugging-port=9222 \"%cd%/integrate/html/Degrees_of_Lewdity",
+        "integrate:html:zip": "cd ./integrate/html && start /WAIT 7z x -y Degrees_of_Lewdity.zip",
+        "integrate:android": "npm run integrate:android:decomp && npm run integrate:android:rename && npm run integrate:android:copy && npm run integrate:android:build",
+        "integrate:android:decomp": "cd ./integrate/android && start /WAIT /B apktool d Degrees_of_Lewdity.apk",
+        "integrate:android:rename": "cd ./integrate/android/Degrees_of_Lewdity/assets/www && node -e \"require('fs').rename('index.html', 'Degrees of Lewdity.html', () => {})\"",
+        "integrate:android:copy": "copyfiles -u 1 dist/**/* integrate/android/Degrees_of_Lewdity/assets/www/",
+        "integrate:android:build": "npm run integrate:android:build:1&& npm run integrate:android:build:2 && npm run integrate:android:build:3 && npm run integrate:android:build:4",
+        "integrate:android:build:1": "cd ./integrate/android && start /WAIT /B apktool b ./Degrees_of_Lewdity",
+        "integrate:android:build:2": "cd ./integrate/android && zipalign -f -v 4 ./Degrees_of_Lewdity/dist/Degrees_of_Lewdity.apk ./Degrees_of_Lewdity/dist/Degrees_of_Lewdity_aligned.apk",
+        "integrate:android:build:3": "cd ./integrate/android && apksigner sign --ks dolRemoteSave.keystore --ks-pass pass:dolRemoteSave ./Degrees_of_Lewdity/dist/Degrees_of_Lewdity_aligned.apk",
+        "integrate:android:build:4": "cd ./integrate/android && apksigner verify -v ./Degrees_of_Lewdity/dist/Degrees_of_Lewdity_aligned.apk",
+        "integrate:android:keytool": "cd ./integrate/android && keytool -genkey -v -keystore dolRemoteSave.keystore -alias dolRemoteSave_keystore -keyalg RSA -validity 10000",
+        "start": "cd ./integrate/html/Degrees_of_Lewdity && start \"Degrees of Lewdity\" /d \"J:\\Program Files\\nwjs-sdk-v0.89.0-win-x64\\\" nw.exe --remote-debugging-port=9222 \"%cd%/integrate/html/Degrees_of_Lewdity",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
