Finished Integration Scripts / version bump

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "dol_remote_save",
     "main": "index.html",
     "chromium-args": "--allow-file-access-from-files",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "scripts": {
         "build": "tsc --project tsconfig.json",
         "build:start": "npm run clean && npm run build && npm run dist && npm run integrate:html && npm run start",
+        "build:all": "npm run build:android && npm run integrate:html && npm run dist:integrate:android && npm run dist:integrate:html && dist:integrate:zip",
         "build:android": "npm run clean && npm run build && npm run dist && npm run integrate:android",
         "build:html": "npm run clean && npm run build && npm run dist && npm run integrate:html",
         "clean": "npm run clean:dist && npm run clean:js && npm run clean:integrate",
@@ -20,9 +21,12 @@
         "dist:css1": "copyfiles dolRemoteSaveStyle/**/* dist",
         "dist:css2": "copyfiles *.css dist/",
         "dist:package": "copyfiles package.json dist/",
+        "dist:integrate:android": "copyfiles -u 4 integrate/android/Degrees_of_Lewdity/dist/Degrees_of_Lewdity_aligned.apk dist/ && node -e \"require('fs').rename('./dist/Degrees_of_Lewdity_aligned.apk', './dist/Degrees_of_Lewdity.apk', () => {})\"",
+        "dist:integrate:html": "copyfiles -u 2 integrate/html/Degrees_of_Lewdity/**/* dist/ && cd ./dist && start /WAIT /B 7z a -y Degrees_of_Lewdity.zip .\\Degrees_of_Lewdity\\",
+        "dist:integrate:zip": "cd ./dist && start /WAIT /B 7z a -y dolRemoteSave.zip dolRemoteSave dolRemoteSaveStyle index.html index.css package.json",
         "integrate": "npm run integrate:html && npm run integrate:android",
         "integrate:html": "npm run integrate:html:zip && copyfiles -u 1 dist/**/* integrate/html/Degrees_of_Lewdity/",
-        "integrate:html:zip": "cd ./integrate/html && start /WAIT 7z x -y Degrees_of_Lewdity.zip",
+        "integrate:html:zip": "cd ./integrate/html && start /WAIT /B 7z x -y Degrees_of_Lewdity.zip",
         "integrate:android": "npm run integrate:android:decomp && npm run integrate:android:rename && npm run integrate:android:copy && npm run integrate:android:build",
         "integrate:android:decomp": "cd ./integrate/android && start /WAIT /B apktool d Degrees_of_Lewdity.apk",
         "integrate:android:rename": "cd ./integrate/android/Degrees_of_Lewdity/assets/www && node -e \"require('fs').rename('index.html', 'Degrees of Lewdity.html', () => {})\"",
